# volchara

./: CMakeLists.txt  README.md
include/: objects.hpp  renderer.hpp
samples/: CMakeLists.txt
samples/SPAAAAAAAAACE/: space.cpp
samples/katamari/: CMakeLists.txt  katamari.cpp
samples/katamari/models/: CatModel.glb
shaders/: base.frag  base.vert  light.frag  transparency.frag
src/: CMakeLists.txt  objects.cpp  renderer.cpp
